
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_CairnOptospinUCSF.la
libmmgr_dal_CairnOptospinUCSF_la_SOURCES = CairnOptoSpinUCSF.h CairnOptoSpinUCSF.cpp
libmmgr_dal_CairnOptospinUCSF_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_CairnOptospinUCSF_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
