
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) $(BOOST_CPPFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_Cephla.la
libmmgr_dal_Cephla_la_SOURCES = Squid.h SquidDA.cpp SquidHub.cpp SquidMonitoringThread.cpp SquidShutter.cpp SquidXYStage.cpp SquidZStage.cpp crc8.h ../../MMDevice/MMDevice.h
libmmgr_dal_Cephla_la_LDFLAGS = $(MMDEVAPI_LDFLAGS) 
libmmgr_dal_Cephla_la_LIBADD = $(MMDEVAPI_LIBADD)

EXTRA_DIST = Cephla.vcxproj Cephla_Controller_Docs.md
