AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS) $(BOOST_CPPFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_DemoCamera.la
libmmgr_dal_DemoCamera_la_SOURCES = \
	DemoAutoFocus.cpp \
	DemoCamera.cpp \
	DemoCamera.h \
	DemoCameraModule.cpp \
	DemoDA.cpp \
	DemoGalvo.cpp \
	DemoHub.cpp \
	DemoImageGeneration.cpp \
	DemoImageProcessors.cpp \
	DemoMagnifier.cpp \
	DemoPumps.cpp \
	DemoShutter.cpp \
	DemoStages.cpp \
	DemoStateDevices.cpp

libmmgr_dal_DemoCamera_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
libmmgr_dal_DemoCamera_la_LIBADD = $(MMDEVAPI_LIBADD)
