
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_LightSheetManager.la
libmmgr_dal_LightSheetManager_la_SOURCES = \
	LightSheetDeviceManager.h \
	LightSheetDeviceManager.cpp \
	LightSheetManager.h \
	LightSheetManager.cpp \
	MicroscopeGeometry.h \
	MicroscopeGeometry.cpp
libmmgr_dal_LightSheetManager_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_LightSheetManager_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = LightSheetManager.vcproj license.txt
