AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_MicroFPGA.la
libmmgr_dal_MicroFPGA_la_SOURCES = MicroFPGA.cpp MicroFPGA.h \
   ../../MMDevice/MMDevice.h ../../MMDevice/DeviceBase.h
libmmgr_dal_MicroFPGA_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_MicroFPGA_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
