AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_openUC2.la
libmmgr_dal_openUC2_la_SOURCES = \
				 openuc2.cpp \
				 openuc2.h \
				 Shutter.cpp \
				 Shutter.h \
				 UC2hub.cpp \
				 UC2Hub.h \
				 XYStage.cpp \
				 XYStage.h \
				 ZStage.cpp \
				 ZStage.h

libmmgr_dal_openUC2_la_LDFLAGS = $(MMDEVAPI_LDFLAGS) 
libmmgr_dal_openUC2_la_LIBADD = $(MMDEVAPI_LIBADD)
