AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_OxxiusCombiner.la
libmmgr_dal_OxxiusCombiner_la_SOURCES = \
					Cobolt08_01.cpp \
					CoherentObis.cpp \
					GenericLaser.cpp \
					OxxiusCombinerHub.cpp \
					OxxiusFlipMirror.cpp \
					OxxiusLBX.cpp \
					OxxiusLCX.cpp \
					OxxiusMDual.cpp \
					OxxiusShutter.cpp

libmmgr_dal_OxxiusCombiner_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_OxxiusCombiner_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)

EXTRA_DIST = OxxiusCombiner.vcproj
