
AM_CXXFLAGS = $(MMDEVAPI_CXXFLAGS)
deviceadapter_LTLIBRARIES = libmmgr_dal_PIGCS2.la
libmmgr_dal_PIGCS2_la_SOURCES =  PIGCSControllerComDevice.cpp PIGCSControllerComDevice.h \
	PIGCSControllerDLLDevice.cpp PIGCSControllerDLLDevice.h \
	PIXYStage.cpp PIXYStage.h \
	PIZStage.cpp PIZStage.h \
	PI_GCS_2.cpp PI_GCS_2.h \
	PIGCSCommands.cpp PIGCSCommands.h \
	PIGCSCommandsDLL.cpp PIGCSCommandsDLL.h \
	PIController.cpp PIController.h \
	PIControllerObserver.h
libmmgr_dal_PIGCS2_la_LIBADD = $(MMDEVAPI_LIBADD)
libmmgr_dal_PIGCS2_la_LDFLAGS = $(MMDEVAPI_LDFLAGS)
